Adapt JDK-8305895: Implement JEP 450: Compact Object Headers